added barcode and fixing berita

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
-        "matthewbdaly/laravel-azure-storage": "*"
+        "matthewbdaly/laravel-azure-storage": "*",
+        "milon/barcode": "^9.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
