--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
         "matthewbdaly/laravel-azure-storage": "*",
+        "midtrans/midtrans-php": "^2.5",
         "milon/barcode": "^9.0"
     },
     "require-dev": {
